[package]
name = "mpr"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.40", default-features = false }
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
defmt = "1.0"
defmt-rtt = "1.0"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "defmt",
    "executor-thread",
] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
embassy-stm32 = { version = "0.2.0", features = [
    "defmt",
    "stm32l443rc",
    "time",
    "time-driver-any",
    "memory-x",
    "chrono",
    "exti",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
panic-probe = { version = "0.3.2", features = ["print-defmt"] }


[profile.release]
debug = 2
